--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,13 +1,13 @@
-<h1 class="mt-4">Tableau de bord</h1>
-<h4>Nombre d'utilisateurs : <%= users.length %></h4>
-<a href="/users/logout" class="btn btn-secondary">Déconnexion</a><br><br><br>
+<h1 class="mt-4">Dashboard</h1>
+<h4>Number of users : <%= users.length %></h4>
+<a href="/users/logout" class="btn btn-secondary">Log out</a><br><br><br>
 <table class="table">
   <thead>
     <tr>
       <th scope="col">#</th>
-      <th scope="col">Nom</th>
-      <th scope="col">Poste & Entreprise</th>
-      <th scope="col">Email</th>
+      <th scope="col">Name</th>
+      <th scope="col">Position at Enterprise</th>
+      <th scope="col">E-mail</th>
       <th scope="col">Action</th>
     </tr>
   </thead>
@@ -16,9 +16,9 @@
   <tr>
     <th scope="row">#</th>
     <td><%= user.name %></td>
-    <td><%= user.position %> chez <%= user.enterprise %></td>
+    <td><%= user.position %> at <%= user.enterprise %></td>
     <td><a href="mailto:<%= user.email %>"><%= user.email %></a></td>
-    <td><a href="delete/<%= user._id %>" class="btn btn-outline-danger">Supprimer</a></td>
+    <td><a href="delete/<%= user._id %>" class="btn btn-outline-danger">Delete</a></td>
   </tr>
 <% }) %>
   </tbody>
