--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
       <%- include ('./partials/messages'); %>
       <form action="/users/login" method="POST">
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email">E-mail</label>
           <input
             type="email"
             id="email"
@@ -26,9 +26,9 @@
         </div>
         <button type="submit" class="btn btn-primary btn-block">Login</button>
       </form>
-      <p class="lead mt-4">
+      <!-- <p class="lead mt-4">
         No Account? <a href="/users/register">Register</a>
-      </p>
+      </p> -->
     </div>
   </div>
 </div>
